[package]
name = "logd"
version = "0.0.1"
authors = ["Qing Yan <admin@zensh.com>"]
description = "Logging data collector."
documentation = "https://iorust.github.io/logd/logd"
homepage = "https://github.com/iorust/logd"
repository = "https://github.com/iorust/logd.git"
readme = "README.md"
keywords = ["logging", "data", "collector", "syslog"]
license = "MIT/Apache-2.0"

[dependencies]
clap = {version = "2.9.2", default-features = false}
